Prevent overflow when width is limited

--- a/src/app.css
+++ b/src/app.css
@@ -21,8 +21,6 @@ body {
 	min-height: 100%;
 	display: flex;
 	flex-direction: column;
-	align-items: center;
-	justify-content: center;
 	padding: 1em;
 	overflow: auto;
 }
